--- a/applicationdevelopment/index.html
+++ b/applicationdevelopment/index.html
@@ -25,9 +25,9 @@
                     <tr>
                         <th rowspan="2">Actions </th>
                         <th class="sorting">Name</th>
-                        <th>Description</th>
-                        <th>Owner Name</th>
-                        <th>Read Permissions</th>
+                        <th class="sorting">Description</th>
+                        <th class="sorting">Owner Name</th>
+                        <th class="sorting"> Read Permissions</th>
                     </tr>
                     <tr>
                         <th><input type="text" name="name" placeholder="Type Here"></th>
