commit after more js and css changes

--- a/assignment.htm
+++ b/assignment.htm
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
 </head>
-
+<body>
 <div class="main-container">
 <div class="side-bar">
 	<div class="search-box">
@@ -12,7 +12,21 @@
 	</div>
 
 	<div class="dashboard">
-		<span class="lbl-dashboard lbl-dashboard-main">Dashboard</span>
+	<ul>
+		<li id="listItemDashboardMain" class="lbl-dashboard lbl-dashboard-main">Dashboard</li>
+		
+		<li id="listItemDashboardCampaignTab" class="lbl-dashboard lbl-dashboard-campaign-tab">Campaign</li>
+		
+		<li class="lbl-dashboard">Account</li>
+		
+		<li class="lbl-dashboard">Users</li>
+		
+		<li class="lbl-dashboard">Downloads</li>
+		
+		<li class="lbl-dashboard">Sales</li>
+	</ul>
+
+<!-- 		<span class="lbl-dashboard lbl-dashboard-main">Dashboard</span>
 		
 		<span class="lbl-dashboard lbl-dashboard-campaign-tab">Campaign</span>
 		
@@ -22,7 +36,7 @@
 		
 		<span class="lbl-dashboard">Downloads</span>
 		
-		<span class="lbl-dashboard">Sales</span>
+		<span class="lbl-dashboard">Sales</span> -->
 	</div>
 </div>
 
@@ -57,4 +71,5 @@
 </div>
 <script type="text/javascript" src="jquery-2.1.4.js"></script>
 <script type="text/javascript" src="javascripts/mainScript.js"></script>
+</body>
 </html>
