--- a/applicationdevelopment/index.html
+++ b/applicationdevelopment/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
+    
 </head>
 <body>
 
@@ -76,5 +76,7 @@
     </div>
 </div>
 
+<script type="text/javascript" src="app/js/libs/jquery.min.js"></script>
+<script type="text/javascript" src="app/js/app.js"></script>
 </body>
 </html>
