Working on edit action

--- a/applicationdevelopment/index.html
+++ b/applicationdevelopment/index.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <div class="content-wrapper">
-        <div class="" id="all-saved">
+        <div id="all-saved" class="tab-content active">
             <!-- <table class="table-data">
                 <thead>
                     <tr>
@@ -85,7 +85,8 @@
                     <div class="col action-col">
                         <div class="cell">Action</div>
                     </div>
-                    <div class="col col-name">
+                    
+                    <!-- <div class="col col-name">
                         <div class="cell sorting">Name</div>
                         <div class="cell input-cell"><input type="text" name="name" placeholder="Type Here"></div>
                     </div>
@@ -100,16 +101,22 @@
                     <div class="col col-perm">
                         <div class="cell sorting">Read Permissions</div>
                         <div class="cell input-cell"><input type="text" name="name" placeholder="Type Here"></div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
         </div>
 
         <!-- Still in progress -->
-        <div id="shared"></div>
-        <div id="my-saved"></div>
-        <div id="my-recent"></div>
+        <div id="shared" class="tab-content">
+            <h2>Shared Searches</h2>
+        </div>
+        <div id="my-saved" class="tab-content">
+            <h2>My Saved </h2>
+        </div>
+        <div id="my-recent" class="tab-content">
+            <h2>My Recent</h2>
+        </div>
     </div>
 </div>
 
