--- a/Assignment-screen/screen-1.html
+++ b/Assignment-screen/screen-1.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="screen.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
 	</head>
 	
 	<body>
@@ -39,55 +40,16 @@
 						<td><input type="search" placeholder="Type Here"></td>
 						<td><input type="search" placeholder="Type Here"></td>
 					</tr>
-					<tr class="data-show">
-						
-					</tr>
-				</table>
+					</table>
+					<table class="data-show">
+						<tr></tr>
+
+					</table>
 
 			</div>
 			
 		</div>
 
 	</body>
-	<script>
-
-var data =[{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"},{"name":"Edited the search Criteria", "description":"TC and Global Admin","ownername":"LogRhythm Admin","readpermissions":"Private"}];
-
-
-
-
-var news = document.getElementsByClassName("table-head")[0];
-var items = data;
-
-for(var i = 0; i < items.length; i++) {
-    var newTr = document.createElement("tr");
-
-    var newTd1 = document.createElement('td')
-    var newTd2 = document.createElement('td')
-    var newTd3 = document.createElement('td')
-    var newTd4 = document.createElement('td')
-    var newTd5 = document.createElement('td')
-
-    newTr.appendChild(newTd1)
-    newTr.appendChild(newTd2)
-    newTr.appendChild(newTd3)
-    newTr.appendChild(newTd4)
-    newTr.appendChild(newTd5)
-
-
-
-    newTd1.innerHTML = '<span class="glyphicon glyphicon-play color-gly"></span>   <span class="glyphicon glyphicon-pencil color-gly"></span>   <span class="glyphicon glyphicon-trash color-gly"></span>';
-    newTd2.innerHTML = items[i].name;
-    newTd3.innerHTML = items[i].description;
-    newTd4.innerHTML = items[i].ownername;
-    newTd5.innerHTML = items[i].readpermissions;
-
-	console.log(newTr)
-   	news.appendChild(newTr);
-
-
-   }
-
-
-	</script>
+	<script src="main-script.js"></script>
 </html>
