Edit section is done working on update action

--- a/applicationdevelopment/index.html
+++ b/applicationdevelopment/index.html
@@ -82,9 +82,9 @@
             </table> -->
             <div class="data-table">
                 <div class="tbody">
-                    <div class="col action-col">
+                    <!-- <div class="col action-col">
                         <div class="cell">Action</div>
-                    </div>
+                    </div> -->
                     
                     <!-- <div class="col col-name">
                         <div class="cell sorting">Name</div>
