--- a/typography-css.html
+++ b/typography-css.html
@@ -1,3 +1,6 @@
+<head>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>		<!-- IMPORT FONTS FROM GOOGLE -->
+</head>
 <body>
 <h1> Dani </h2>
 <h2> The Way to rule World </h2>
@@ -7,22 +10,19 @@
 </body>
 
 <style type="text/css">
-
 body{
 background-color: #e7b91b;
-
 }
 	h1 {
 	color: #111;
-	font-family: 'Helvetica Neue', sans-serif;
+	font-family: 'Open Sans', sans-serif;		/*apply fonts*/
 	font-size: 275px;
 	font-weight: bold;
 	letter-spacing: -1px;
 	line-height: 1;
 	text-align: center;
-	text-shadow: 2px 10px 2px #333;
+	text-shadow: 2px 5px 2px #333;
 }
-
 h2 {
 	color: #111;
 	font-family: 'Open Sans', sans-serif;
@@ -32,29 +32,22 @@ h2 {
 	margin: 0 0 72px;
 	text-align: center;
 }
-
 p {
 	color: #685206;
-	font-family: 'Helvetica Neue', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	line-height: 24px;
 	margin: 0 0 24px;
 	text-align: justify;
 }
-
 .left {
 	float: left;
 	margin-left: 15px;
 	width: 260px;
 }
-
 .right {
 	float: right;
 	margin-right: 15px;
 	width: 260px;
 }
-
-
-
-
 </style>
