minor changes committed

--- a/assignment.htm
+++ b/assignment.htm
@@ -16,11 +16,11 @@
 	 </div>
 	 <table class="tbl-field"><thead>
 	 	<tr id="first-field-row">
-	 		<td class="td-field-class td-first-field">Actions</td>
-	 		<td class="td-field-class">Name</td>
-	 		<td class="td-field-class td-description-field">Description</td>
-	 		<td class="td-field-class">Owner Name</td>
-	 		<td class="td-field-class">Read Permissions</td>
+	 		<td class="td-field-class td-first-field">Actions <i class="fa fa-sort"></i></td>
+	 		<td class="td-field-class">Name <i class="fa fa-sort"></i></td>
+	 		<td class="td-field-class td-description-field">Description <i class="fa fa-sort"></i></td>
+	 		<td class="td-field-class">Owner Name <i class="fa fa-sort"></i></td>
+	 		<td class="td-field-class">Read Permissions <i class="fa fa-sort"></i></td>
 	 	</tr>	
 	 	<tr>
 	 		<td class="td-field-class td-first-field"></td>
