--- a/assignment.htm
+++ b/assignment.htm
@@ -14,32 +14,32 @@
 	 		<li><a href="#">My Recent</a></li>
 	 	</ul>
 	 </div>
-	 <table class="tbl-field"><thead>
-	 	<tr id="first-field-row">
-	 		<td class="td-field-class td-first-field">Actions <i class="fa fa-sort"></i></td>
-	 		<td class="td-field-class">Name <i class="fa fa-sort"></i></td>
-	 		<td class="td-field-class td-description-field">Description <i class="fa fa-sort"></i></td>
-	 		<td class="td-field-class">Owner Name <i class="fa fa-sort"></i></td>
-	 		<td class="td-field-class">Read Permissions <i class="fa fa-sort"></i></td>
-	 	</tr>	
-	 	<tr>
-	 		<td class="td-field-class td-first-field"></td>
-	 		<td class="td-input-field-class">
-	 			<input type="text" placeholder="Type Here" class="input-table-field">
-	 		</td>
-	 		<td class="td-input-field-class td-description-field">
-	 			<input type="text" placeholder="Type Here" class="input-table-field">
-	 		</td>
-	 		<td class="td-input-field-class">
-	 			<input type="text" placeholder="Type Here" class="input-table-field">
-	 		</td>
-	 		<td class="td-input-field-class">
-	 			<input type="text" placeholder="Type Here" class="input-table-field">
-	 		</td></thead>
-	 		<tbody id="mainDataTable" class="tbl-field"></tbody>	 		
-	 	</tr>
-	 </table>
-	 
-	 </table>
+	 <div class="main-template-body">
+		 <table class="tbl-field"><thead>
+		 	<tr id="first-field-row">
+		 		<td class="td-field-class td-first-field">Actions</td>
+		 		<td class="td-field-class">Name <i class="fa fa-sort sort-icon"></i></td>
+		 		<td class="td-field-class td-description-field">Description <i class="fa fa-sort sort-icon"></i></td>
+		 		<td class="td-field-class">Owner Name <i class="fa fa-sort sort-icon"></i></td>
+		 		<td class="td-field-class">Read Permissions <i class="fa fa-sort sort-icon"></i></td>
+		 	</tr>	
+		 	<tr>
+		 		<td class="td-field-class td-first-field"></td>
+		 		<td class="td-input-field-class">
+		 			<input type="text" placeholder="Type Here" class="input-table-field">
+		 		</td>
+		 		<td class="td-input-field-class td-description-field">
+		 			<input type="text" placeholder="Type Here" class="input-table-field">
+		 		</td>
+		 		<td class="td-input-field-class">
+		 			<input type="text" placeholder="Type Here" class="input-table-field">
+		 		</td>
+		 		<td class="td-input-field-class">
+		 			<input type="text" placeholder="Type Here" class="input-table-field">
+		 		</td></thead>
+		 		<tbody id="mainDataTable" class="tbl-field"></tbody>	 		
+		 	</tr>
+		 </table>
+	 </div>
 </div>
 </html>
