--- a/Assignment-screen/screen1-new.html
+++ b/Assignment-screen/screen1-new.html
@@ -13,7 +13,7 @@
 			<div class="nav">
 				<ul class="nav-list">
 					<li class="active"><a href="#"> All Saved </a></li>
-					<li id="data-two"><a href="C:\Users\danish.arora\Desktop\danish\screen-2.html" onclick="populateData2()">Shared Searches </a></li>
+					<li id="sharedTab"><a href="C:\Users\danish.arora\Desktop\danish\screen-2.html">Shared Searches </a></li>
 					<li><a href="#"> My Saved </a></li>
 					<li><a href="#"> My Recent </a></li>
 				</ul>				
