box sizing exercize added

--- a/GridAssignment/assignment.htm
+++ b/GridAssignment/assignment.htm
@@ -4,10 +4,12 @@
 <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
 </head>
 <body>
-<div class="main-container">
+<div class="main-container clearfix">
+<!-- border-box added so that nav boxes align perfectly along with their borders -->
 	<div class="navbox1"></div>
 	<div class="navbox2"></div>
-	<div class="navbox3"</div>
+	<div class="navbox3"></div>
+	<div class="navbox4"</div>
 </div>
 </body>
 </html>
