minor changes commit

--- a/GridAssignment/assignment.htm
+++ b/GridAssignment/assignment.htm
@@ -6,10 +6,10 @@
 <body>
 <div class="main-container clearfix">
 <!-- border-box added so that nav boxes align perfectly along with their borders -->
-	<div class="navbox1"></div>
-	<div class="navbox2"></div>
-	<div class="navbox3"></div>
-	<div class="navbox4"</div>
+	<div class="navbox"></div>
+	<div class="navbox navbox2-color-class"></div>
+	<div class="navbox navbox3-color-class"></div>
+	<div class="navbox navbox4-color-class"></div>
 </div>
 </body>
 </html>
