Now update button is working fine

--- a/applicationdevelopment/index.html
+++ b/applicationdevelopment/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+
+
 <div class="wrapper">
     <div class="tab-navi">
         <ul class="clearfix">
@@ -45,6 +47,7 @@
 
 
 <script type="text/javascript" src="app/js/libs/jquery.min.js"></script>
+<script type="text/javascript" src="app/js/libs/jquery.cookie.js"></script>
 <script type="text/javascript" src="app/js/app.js"></script>
 
 <script type="text/x-tmpl" id="all-saved">
@@ -75,6 +78,7 @@
         <h2>My Recent</h2>
     </div>
 </script>
+
 
 </body>
 </html>
