--- a/assignment.htm
+++ b/assignment.htm
@@ -8,14 +8,14 @@
 <div class="main-container">
 	<div class="nav-row clearfix">
 	 	<ul class="nav-list clearfix">
-	 		<li><a href="#">All Saved</a></li>
-	 		<li><a href="#">Shared Searches</a></li>
-	 		<li><a href="#">My Saved</a></li>
-	 		<li><a href="#">My Recent</a></li>
+	 		<li id="allSaved"><a href="#">All Saved</a></li>
+	 		<li id="sharedSearches"><a href="#">Shared Searches</a></li>
+	 		<li id="mySaved"><a href="#">My Saved</a></li>
+	 		<li id="myRecent"><a href="#">My Recent</a></li>
 	 	</ul>
 	 </div>
 	 <div class="main-template-body">
-		<table class="tbl-field">
+		<table id="mainTableBody" class="tbl-field">
 			<thead>
 			 	<tr id="first-field-row">
 			 		<td class="td-field-class td-first-field">Actions</td>
