jasmine suite added to assignment with dummy test

--- a/assignment.htm
+++ b/assignment.htm
@@ -1,5 +1,4 @@
 <html>
-
 <head>
 <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
 </head>
@@ -52,5 +51,10 @@
 </div>
 <script type="text/javascript" src="jquery-2.1.4.js"></script>
 <script type="text/javascript" src="javascripts/mainScript.js"></script>
+<link rel="shortcut icon" type="image/png" href="jasmine/lib/jasmine-2.3.4/jasmine_favicon.png">
+<link rel="stylesheet" type="text/css" href="jasmine/lib/jasmine-2.3.4/jasmine.css">
+<script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/jasmine.js"></script>
+<script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/jasmine-html.js"></script>
+<script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/boot.js"></script>
 </body>
 </html>
