color class made generic

--- a/GridAssignment/assignment.htm
+++ b/GridAssignment/assignment.htm
@@ -1,15 +1,14 @@
 <html>
-
 <head>
 <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
 </head>
 <body>
 <div class="main-container clearfix">
 <!-- border-box added so that nav boxes align perfectly along with their borders -->
-	<div class="navbox"></div>
-	<div class="navbox navbox2-color-class"></div>
-	<div class="navbox navbox3-color-class"></div>
-	<div class="navbox navbox4-color-class"></div>
+	<div class="navbox bg-yellow"></div>
+	<div class="navbox bg-blue"></div>
+	<div class="navbox bg-green"></div>
+	<div class="navbox bg-purple"></div>
 </div>
 </body>
 </html>
