added test cases plus optimization

--- a/assignment.htm
+++ b/assignment.htm
@@ -50,11 +50,12 @@
 
 </div>
 <script type="text/javascript" src="jquery-2.1.4.js"></script>
-<script type="text/javascript" src="javascripts/mainScript.js"></script>
 <link rel="shortcut icon" type="image/png" href="jasmine/lib/jasmine-2.3.4/jasmine_favicon.png">
 <link rel="stylesheet" type="text/css" href="jasmine/lib/jasmine-2.3.4/jasmine.css">
 <script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/jasmine.js"></script>
 <script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/jasmine-html.js"></script>
 <script type="text/javascript" src="jasmine/lib/jasmine-2.3.4/boot.js"></script>
+<script type="text/javascript" src="javascripts/mainScript.js"></script>
+<script type="text/javascript" src="javascripts/mainScriptSpec.js"></script>
 </body>
 </html>
